--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start": "nodemon ./bin/www"
     },
     "dependencies": {
+        "aws-sdk": "^2.1026.0",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
@@ -15,6 +16,7 @@
         "express-session": "^1.17.2",
         "http-errors": "~1.6.3",
         "morgan": "~1.9.1",
+        "multer": "^1.4.3",
         "mysql2": "^2.3.0",
         "nodemailer": "^6.6.3",
         "nodemailer-express-handlebars": "^4.0.0",
