--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "aws-sdk": "^2.1026.0",
         "bcryptjs": "^2.4.3",
+        "convert-excel-to-json": "^1.7.0",
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
         "dotenv": "^10.0.0",
